there was no css for delivery hence the website looked crowded. the delivery css has been fixed and images and sentences have been rescaled and realigned

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -395,76 +395,68 @@ img {
 }
 
 /*=============== POPULAR ===============*/
-.popular{
-  background-color: var(--body-color-alt);
-}
+<section class="popular section" id="popular">
+    <h2 class="section__title">Most Gobbled <br> Burgers</h2>
 
-.popular__container{
-  padding-block: 2rem;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 3.5rem 1.5rem;
-}
+    <div class="popular__container container grid">
+        <article class="popular__card">
+            <img src="assets/img/popular-burger-chicken.png" alt="Chicken Burger" class="popular__img popular-burger-chicken">
+            <h2 class="popular__title">Chicken <br> Burger</h2>
+            <span class="popular__price">ksh 1,200</span>
+            <button class="popular__button">
+                <i class="ri-shopping-bag-3-fill"></i>
+            </button>
+        </article>
 
-.popular__card{
-  position: relative;
-  background-color: var(--first-color);
-  padding: 6rem .75rem 1 rem;
-  border-radius: 1rem;
-  border: 4px solid var(--container-color);
-}
+        <article class="popular__card">
+            <img src="assets/img/popular-burger-meat.png" alt="Meat Burger" class="popular__img popular-burger-meat">
+            <h2 class="popular__title">Meat <br> Burger</h2>
+            <span class="popular__price">ksh 1,500</span>
+            <button class="popular__button">
+                <i class="ri-shopping-bag-3-fill"></i>
+            </button>
+        </article>
 
-.popular__img{
-  position: absolute;
-  top: -2rem;
-  left: 0;
-  right: 0;
-  width: 120px;
-  margin: 0 auto;
-  filter: var(--shadow-small-img);
-  transition: transform .4s;
-}
+        <article class="popular__card">
+            <img src="assets/img/popular-burger-grill.png" alt="Grill Burger" class="popular__img popular-burger-grill">
+            <h2 class="popular__title">Grill <br> Burger</h2>
+            <span class="popular__price">ksh 1,700</span>
+            <button class="popular__button">
+                <i class="ri-shopping-bag-3-fill"></i>
+            </button>
+        </article>
 
-.popular__title{
-  font-size: var(--normal-font-size);
-  margin-bottom: .75rem;
-}
+        <article class="popular__card">
+            <img src="assets/img/popular-burger-classic.png" alt="Classic Burger" class="popular__img popular-burger-classic">
+            <h2 class="popular__title">Classic <br> Burger</h2>
+            <span class="popular__price">ksh 1,200</span>
+            <button class="popular__button">
+                <i class="ri-shopping-bag-3-fill"></i>
+            </button>
+        </article>
 
-.popular__price{
-  color: var(--title-color);
-  font-family: var(--second-font);
-  font-size: var(--h2-font-size)
-}
-
-.popular__button{
-  position: absolute;
-  right: .75rem;
-  bottom: 1rem;
-  outline: none;
-  border: none;
-  background-color: var(--second-color);
-  color: var(--white-color);
-  padding: 6px;
-  border-radius: .5rem;
-  font-size: 1.25rem;
-  display: inline-flex;
-  cursor: pointer;
-}
-
-.popular__card:hover .popular__img{
-  transform: translateY(-.5rem);
-  }
+        <article class="popular__card">
+            <img src="assets/img/popular-burger-big.png" alt="Big Burger" class="popular__img popular-burger-big">
+            <h2 class="popular__title">Big <br> Burger</h2>
+            <span class="popular__price">ksh 1,900</span>
+            <button class="popular__button">
+                <i class="ri-shopping-bag-3-fill"></i>
+            </button>
+        </article>
+    </div> 
+</section>
 
 /*=============== DELIVERY ===============*/
 .delivery__container{
   row-gap: 2.5rem;
 }
 
-.delivery__data{
+.deliver__data{
   position: relative;
   text-align: center;
 }
 
-.delivery__container .section__title{
+.deliver__container .section__title{
   margin-bottom: 1rem;
 }
 
@@ -472,7 +464,7 @@ img {
   margin-bottom: 2rem;
 }
 
-.delivery__sticker{
+.deliver__sticker{
   width: 30px;
   rotate: 15deg;
   position: absolute;
@@ -488,45 +480,45 @@ img {
 }
 
 /*=============== CONTACT ===============*/
-.contact__container{
+.contact__container {
   position: relative;
-  background-color: var(--second-color);
+  background-color: var(--second-color); 
   padding-top: 3.5rem;
   border-radius: 3rem;
-  overflow: hidden;
+  overflow: hidden; 
 }
 
-.contact__content{
-  row-gap: 3rem;
+.contact__content {
+  row-gap: 3rem; 
 }
 
 .contact__container .section__title,
 .contact__title,
-.contact__info{
-  color: var(--white-color);
+.contact__info {
+  color: var(--white-color); 
 }
 
-.contact__data{
+.contact__data {
   text-align: center;
-  row-gap: 2rem;
+  row-gap: 2rem; 
 }
 
-.contact__title{
-  font-size: var(--h2-font-size);
+.contact__title {
+  font-size: var(--h2-font-size); 
   margin-bottom: .75rem;
 }
 
-.contact__social{
+.contact__social {
   display: flex;
   justify-content: center;
   column-gap: 1rem;
 }
 
-.contact__social a{
+.contact__social a {
   width: 32px;
   height: 32px;
-  background-color: var(--first-color);
-  color: var(--second-color);
+  background-color: var(--first-color); 
+  color: var(--second-color); 
   font-size: 1.5rem;
   border-radius: .5rem;
   display: grid;
@@ -534,39 +526,38 @@ img {
   transition: transform .4s;
 }
 
-.contact__social a:hover{
-  transform: translateY(-2.5rem);
+.contact__social a:hover {
+  transform: translateY(-2.5rem); 
 }
 
-.contact__info{
-  font-style: normal;
+.contact__info {
+  font-style: normal; 
 }
 
-.contact__image{
+.contact__image {
   justify-self: center;
 }
 
-.contact__img{
+.contact__img {
   width: 280px;
 }
 
 .contact__sticker-1,
-.contact__sticker-2{
+.contact__sticker-2 {
   position: absolute;
   opacity: .5;
 }
 
-.contact__sticker-2{
+.contact__sticker-1 {
+  
+}
+
+.contact__sticker-2 {
   width: 30px;
   right: 3rem;
   bottom: 12rem;
 }
 
-.contact__sticker-2{
-  width: 30px;
-  right: 3rem;
-  bottom: 12rem;
-}
 /*=============== FOOTER ===============*/
 
 
